Stopped forcing scrollbar to appear; fixed weird margins

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -240,6 +240,8 @@ a[data-ng-click], a[ng-click] {
 }
 #collections_content{
     #collection_content;
+    padding-left:0px;
+    padding-right:0px;
 }
 #tabs{
     display: inline-block;
